--- a/layouts/_defaults/baseof.html
+++ b/layouts/_defaults/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+<html lang="{{ .Site.Language.Lang }}">
 
 <head>
   <meta charset="utf-8">
@@ -24,9 +24,12 @@
   <link rel="canonical" href="{{ .Permalink }}">
   {{ end }}
 
-  <link rel="stylesheet" href="css/fonts.css" />
-  <link rel="stylesheet" href="css/fontawesome-all.css" />
-  <link rel="stylesheet" href="css/normalize.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
 
   {{ if .Site.IsServer }}
   {{ $cssOpts := (dict "targetPath" "css/coder.css" "enableSourceMap" true ) }}
@@ -66,7 +69,11 @@
   {{ end }}
 
   {{ range .Site.Params.custom_css }}
-  <link rel="stylesheet" href="{{ . | relURL }}">
+  <link rel="stylesheet" href="{{ . | relURL }}" />
+  {{ end }}
+
+  {{ range .Site.Params.custom_js }}
+  <script src="{{ . | relURL }}"></script>
   {{ end }}
 
   <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_32 | default "/images/favicon-32x32.png" | absURL }}"
@@ -78,7 +85,9 @@
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
 
-  {{ .Hugo.Generator }}
+  <link rel="stylesheet" type="text/css"
+    href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+  {{ hugo.Generator }}
 </head>
 
 <body class="{{ if .Site.Params.rtl }}rtl{{ end }} {{ if .Site.Params.inverted }}inverted{{ end }}">
@@ -94,6 +103,19 @@
 
   {{ template "_internal/google_analytics.html" . }}
 
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+  <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#000"
+        },
+        "button": {
+          "background": "#f1d600"
+        }
+      }
+    });
+  </script>
 </body>
 
 </html>
